--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChatRoom ZAE</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
 </head>
 <body>
     <h1 style="text-align: center;">Proyecto ZAE</h1>
-    <hr>
+    <div id="usersOnline">Usuarios en linea: 0 </div>
     <div id="new_user"></div>
+    <hr>
     <div id="chat">
         <input type="text" name="" id="username" placeholder="Ingrese su nombre" required class="form-control form-control-lg">
         <div id="all_messages"></div>
