Se aplico clase Fixed bottom a la botonera.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,7 +22,7 @@
         <input type="text" name="" id="username" placeholder="Ingrese su nombre" required
             class="form-control form-control-lg">
         <div id="all_messages"></div>
-        <div class="input-group mb-3 botonera">
+        <div class="input-group mb-3 botonera fixed-bottom">
             <input type="text" id="write_message" class="form-control" placeholder="Mensaje...">
             <button class="btn btn-outline-success" type="button" id="button-addon2">Enviar</button>
         </div>
